--- a/package.json
+++ b/package.json
@@ -7,27 +7,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "crawl": "npx ts-node --project tsconfig.json src/lib/crawler.ts"
+    "crawl": "npx tsx src/lib/run-crawler.ts"
   },
   "dependencies": {
     "cheerio": "^1.0.0",
     "leaflet": "^1.9.4",
-    "next": "^14.0.0",
+    "next": "14.2.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^15.0.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^4.1.0",
     "typescript": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "playwright": "^1.50.0"
   }
 }
