--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "crons": [
-    {
-      "path": "/api/crawl",
-      "schedule": "0 6 * * 1"
-    }
-  ]
+  "framework": "nextjs",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps"
 }
