--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "leaflet": "^1.9.4",
     "next": "14.2.29",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.0",
